Authorization without token

--- a/YavaPrimumBack/YavaPrimum.API/YavaPrimum.API.csproj
+++ b/YavaPrimumBack/YavaPrimum.API/YavaPrimum.API.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\YavaPrimum.Core\YavaPrimum.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
