--- a/YavaPrimumFront/package.json
+++ b/YavaPrimumFront/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --ssl true --ssl-cert D:\\Диплом\\YavaHire\\YavahireFront\\src\\app\\ssl\\server.crt --ssl-key D:\\Диплом\\YavaHire\\YavahireFront\\src\\app\\ssl\\server.key",
+    "start": "ng serve --ssl true --ssl-cert D:\\Диплом\\YavaPrimum\\YavaPrimumFront\\src\\app\\ssl\\server.crt --ssl-key D:\\Диплом\\YavaPrimum\\YavaPrimumFront\\src\\app\\ssl\\server.key",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
