--- a/YavaPrimumFront/package.json
+++ b/YavaPrimumFront/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^19.0.0",
     "@angular/service-worker": "^19.0.0",
     "@microsoft/signalr": "^8.0.7",
+    "@types/luxon": "^3.4.2",
     "bootstrap": "^5.3.3",
+    "luxon": "^3.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
