--- a/YavaPrimumBack/YavaPrimum.Core/YavaPrimum.Core.csproj
+++ b/YavaPrimumBack/YavaPrimum.Core/YavaPrimum.Core.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.5.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
