--- a/YavaPrimumFront/package.json
+++ b/YavaPrimumFront/package.json
@@ -22,6 +22,7 @@
     "@microsoft/signalr": "^8.0.7",
     "@types/luxon": "^3.4.2",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "luxon": "^3.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
