--- a/YavaPrimumFront/package.json
+++ b/YavaPrimumFront/package.json
@@ -23,6 +23,7 @@
     "@types/luxon": "^3.4.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.7",
     "luxon": "^3.5.0",
     "ngx-mask": "^19.0.6",
     "rxjs": "~7.8.0",
