--- a/YavaPrimumFront/package.json
+++ b/YavaPrimumFront/package.json
@@ -23,11 +23,13 @@
     "@types/luxon": "^3.4.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "chart.js": "^4.4.7",
+    "chart.js": "^4.4.8",
     "luxon": "^3.5.0",
+    "ng2-charts": "^8.0.0",
     "ngx-mask": "^19.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
